--- a/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
+++ b/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
@@ -83,9 +83,10 @@ The Bangladesh Labor Force Survey (LFS) employs its national industry classifica
 | 2010 | BSIC 2009                | ISIC revision 4         | First two digits          |
 | 2013 | Unknown                  | ISIC revision 4         | First two digits          |
 
-For 2005, the correspondence is done at four digits based on [a PDF table](Utilities/BSIC_code.pdf), which we converted into a `.dta` file that is read in the harmonization process. The [file is available here](Utilities/Additional%20Data/bsic_isic_mapping.dta).
+For 2005, the correspondence is done at four digits based on [a PDF table](Utilities/BSIC_code.pdf), which
 
-For 2010, the industries are classified using BSIC 2009, which is comparable with the ISIC rev. 4 at 2 digits. There is an additional two-digit code that is not in ISIC (see table below), but neither was it reported as an industry of any individual in the survey. 
+we converted into a `.dta` file that is read in the harmonization process. The [file is available here](Utilities/Additional%20Data/bsic_isic_mapping.dta).
+In 2010, industries were categorized using the BSIC 2009 classification system. This system is largely compatible with ISIC Revision 4 at the 2-digit level, with one notable exception: code "34" (Recycling) is differentiated from code "38". In ISIC, code "38" encompasses recycling activities as well.
 
 In the case of 2013, the actual version is unknown, but a manual review of the codes agrees with the fact the coding is based on ISIC revision #. However, since the full correspondence is unknown, only the first two two digits are mapped to.
 
