Update 1. Introduction to BGD LFS.md

--- a/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
+++ b/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
@@ -98,7 +98,7 @@ In the case of 2013, the actual version is unknown, but a manual review of the c
 | Year | Classification in survey | ISCO revision mapped to | How mapped                |
 |:----:|:------------------------:|:-----------------------:|:--------------------------|
 | 2005 | ISCO 1988                | ISCO 1988               | First two digits          |
-| 2010 | ISCO 1988                | ISCO 1988               | First four digits; if not in ISCO, mapped to first two or three digits         |
+| 2010 | ISCO 1988                | ISCO 1988               | First four digits  |
 | 2013 | BSCO 2012                | ISCO 2008               | First two digits; if not in ISCO, mapped to the first digit         |
 
 The Bangladesh Labor Force Survey (LFS) utilizes two different occupational classifications to identify respondents' occupations. According to survey documentation, the International Standard Classification of Occupations (ISCO) was used in the 2005 and 2010 rounds, while the Bangladesh Standard of Occupational Classification (BSOC) 2012 was used in the 2013, 2015, and 2016 rounds.
