Update 1. Introduction to BGD LFS.md

--- a/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
+++ b/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
@@ -111,4 +111,4 @@ Information on wages are collected based on different reference time periods. In
 
 ### Employment Status
 
-The employment status categories in the Bangladesh LFS vary over the years. The precise details on coding the `empstat` variable is covered in a separate document [here](Employment%20status.md).
+The employment status categories in the Bangladesh LFS vary over the years. The precise details on coding the `empstat` variable are covered in a separate document [here](Employment%20status.md).
