Include Lira revaluation in CSD TUR Intro

--- a/Support/B - Country Survey Details/TUR/HLFS/1. Introduction to HLFS.md
+++ b/Support/B - Country Survey Details/TUR/HLFS/1. Introduction to HLFS.md
@@ -72,6 +72,10 @@ The data used in the GLD changes in terms of the age of respondents. Data prior 
 
 The education section of the harmonized dataset was developed using the NSO raw dataset. However, in the harmonization process, the team noted that the education levels changed between 2000 and 2014. The changes in the education system affected the code used in the GLD harmonization process, as a result, the team decided to create a separate page to explain the peculiarities of the education section and the decisions made by the team that resulted in the variables of the harmonized dataset. Please, use the following [link](/Support/B%20-%20Country%20Survey%20Details/TUR/HLFS/Education.md) to get more details.
 
+### Currency reform
+
+The currency of Türkiye, the Turkish Lira underwent a revaluation in 2005, at a rate of 1,000,000 to 1. Thus, whenever users wish to create a time series of infomation including wage data, all data from 2004 or before should be divided by a million. For more information, please see the [Wikipedia article on the Lira](https://en.wikipedia.org/wiki/Turkish_lira).
+
 ### Occupation Classification
 
 The TUR HLFS occupation data followed the coding from the international classification for occupations i.e., isco-68, isco-88 and isco-08. Though variations between years happened, all the changed followed the correspondence to the international coding classification. The harmonization team prepared a separate [page](/Support/B%20-%20Country%20Survey%20Details/TUR/HLFS/Correspondence%20ISCO.md) that dives deeper into the changes for the case of Türkiye and the resulting limitations to consider while using the harmonized dataset.
