--- a/Support/B - Country Survey Details/ZWE/LFS/1.Introduction to LFS.md
+++ b/Support/B - Country Survey Details/ZWE/LFS/1.Introduction to LFS.md
@@ -1,19 +1,19 @@
-# Introduction to [Full Name of Survey] ([Survey Acronym)]
+# Introduction to Zimbabwe (ZWE) Labour Force Survey
 
-- [What is the CCC survey?](#what-is-the-ccc-survey-acronym)
-- [What does the CCC survey cover?](#what-does-the-ccc-survey-acronym-cover)
+- [What is the ZWE LFS survey?](#what-is-the-zwe-lfs-survey)
+- [What does the ZWE LFS survey cover?](#what-does-the-zwe-lfs-survey-cover)
 - [Where can the data be found?](#where-can-the-data-be-found)
 - [What is the sampling procedure?](#what-is-the-sampling-procedure)
 - [What is the significance level?](#what-is-the-geographic-significance-level)
 - [Other noteworthy aspects](#other-noteworthy-aspects)
 
-## What is the [CCC] [survey Acronym]?
+## What is the ZWE LFS survey?
 
 Short introduction to what the survey is, meaning a paragraph of a few lines. Example:
 
-The Indian Employment and Unemployment Survey (EUS) is the Indian Labour Force Survey run as part to India’s National Sample Survey series from 1987 to 2011.
+The Zimbabwe Labour Force Survey (LFS) is 
 
-## What does the [CCC] [survey Acronym] cover?
+## What does the ZWE LFS survey cover?
 
 Short paragraph on the topics covered as well as information on the years and the sample sizes. One way to generate a table is to use the [Individual and Household ID tabulator tool in R](../Z%20-%20Other%20Tools/Global/unique_hh_ind_obs.R) Example:
 
@@ -48,21 +48,7 @@ Note that, even though the sampling logic is consitent over time, there are chan
 ## What is the geographic significance level?
 
 Brief outline of to what level information in the survey can be aggregated and produce statistically significant results. Example:
-
 The official reports detail results by gender, sector (urban or rural), and state. That is, the unemployment rate of urban women in Madhya Pradesh can be safely reported.
 
 ## Other noteworthy aspects
 
-Any other items that are specific to the survey, that should be highlighted but that may be different from one survey to the next. For example, why you picked only a particlar quarter instead of appending all four. Or particulars about changes in some administrative areas over time. Or how you mapped to ISCO or ISIC, yet if this takes too long, it may be best to create a further document and link to it, as stated below.
-
-### List items as needed and be brief - if longer, refer to other, explicit documents
-
-These individual additional points should be about one to two paragraphs long. If it takes longer consider whether you want to spend the time writing such a long text. It is noble of you, but if you already gave readers and intro, it may be enough and your time is better used elsewhere. If you still consider it is important, you may wish to write a separate text. Make a brief intro here and refer people to the longer text. The point below is an example of this.
-
-### ISIC mapping example (MEX)
-
-The Mexican INEGI codes industry in the ENE based on the North American Industry Classification System (NAICS). This system is very different from the international ISIC format. To map from NAICS to ISIC (versions 3.1 and 4) to code `industrycat_isic`, a special procedure is needed. This process is detailed in a [separate document, available here](../B%20-%20Country%20Survey%20Details/MEX/ENOE/Correspondence_NAICS_ISIC.md).
-
-### Other Documentation Files 
-If we want to link to other documentation files in the same directory, the issue is that we cannot use the permalink web address because eventually the document will change branches, and the link will change. However, GitHub have allowed for [this solution](https://github.blog/2013-01-31-relative-links-in-markup-files/), which involves relative linking. As long as the Introduction and linked files are in the same directory, simply follow the example below and the relative link will always link to the file no matter what branch the files are on: 
-- [GLD Code Template](GLD_Harmonization_Template.do)
