Update 1.Introduction to LFS.md

--- a/Support/B - Country Survey Details/ZWE/LFS/1.Introduction to LFS.md
+++ b/Support/B - Country Survey Details/ZWE/LFS/1.Introduction to LFS.md
@@ -1,54 +1,40 @@
-# Introduction to Zimbabwe (ZWE) Labour Force Survey
+# Introduction to Zimbabwe (ZWE) Labour Force and Child Labour Survey
 
 - [What is the ZWE LFS survey?](#what-is-the-zwe-lfs-survey)
 - [What does the ZWE LFS survey cover?](#what-does-the-zwe-lfs-survey-cover)
 - [Where can the data be found?](#where-can-the-data-be-found)
 - [What is the sampling procedure?](#what-is-the-sampling-procedure)
 - [What is the significance level?](#what-is-the-geographic-significance-level)
-- [Other noteworthy aspects](#other-noteworthy-aspects)
 
 ## What is the ZWE LFS survey?
 
-Short introduction to what the survey is, meaning a paragraph of a few lines. Example:
+The Labour Force and Child Labour Survey
 
-The Zimbabwe Labour Force Survey (LFS) is 
+The Zimbabwe Labour Force Survey (LFS)  provides socioeconomic indicators useful in monitoring living conditions as well as providing in-depth information on the labour force in Zimbabwe. The survey focuses on social and economic characteristics, in particular, status in employment, industry, occupation, place of work and social security. The periodicity of the LFCLS is 5 years.
 
 ## What does the ZWE LFS survey cover?
 
-Short paragraph on the topics covered as well as information on the years and the sample sizes. One way to generate a table is to use the [Individual and Household ID tabulator tool in R](../Z%20-%20Other%20Tools/Global/unique_hh_ind_obs.R) Example:
+The ZWE LFS is nationally representative, The sampling frame used for the LFCLS was the Zimbabwe Master Sample developed by the then Central Statistical Office after the 2002 Population Census. With the
+exception of Harare and Bulawayo, each of the other eight provinces was stratified into four strata according to land use: Communal Lands, Large Scale Commercial Farming Areas (LSCFA), Urban and Semi-Urban Areas, and Small Scale Commercial Farming Areas (SSCFA) and Resettlement Areas. Only one urban stratum was formed each in Harare and Bulawayo. This gave a total of 34 strata.
 
-The Indian EUS is a labour force survey collecting information on demographic details (age, sex, location), education (both academic and vocational), labour market activities over the past 12 months, as well as time use and activities over the previous 7 days. Some years contain further information on consumption expenditure. The years and sample size of EUS harmonized for GLD are:
+| Year	| # of Households	| # of Individuals|
+| :-------	| :--------		| :--------	|
+| 2011	| 9359	| 39,798 |
+| 2014	| 9759	| 40,527 |
+| 2019	| N/A*	| 39,126 |
 
-| Year	| # of Households	| # of Individuals	|
-| :-------	| :--------		| :--------	 	|
-| 1987	| 129,060		| 667,804		|
-| …	| …			| …			|
-| 2011	| 101,724		| 456,999		|
+*The household data of 2019 is yet to be confirmed by the NSO.
 
 ## Where can the data be found?
 
-Paragraph on the source of the data and the documentation. If publicly available for download refer to this explicitly. If the data can only be circulated within the World Bank, make a note of this. If the data, can only be used after filling out a special data request form explain so. Say to get in touch with Jobs Group (cannot provide an email address for now, need to create one) – only WB staff should get in touch, though. Example:
+The microdata from the 2011, 2014 and 2019 LFS is available throught the ILO [data catalog](https://www.ilo.org/surveyLib/index.php/catalog/LFS/?page=1&country%5B%5D=200&ps=15&repo=LFS). Documentation is also available in the data catalog. 
 
-The microdata are free and publicly available on the Ministry of Statistics and Programme Implementation’s (MOSPI) [National Data Archive of microdata](http://microdata.gov.in/nada43/index.php/catalog/EUE). The website also provides all necessary documentation.
 
 ## What is the sampling procedure?
-
-A paragraph with an overview of the procedure. It is OK to paste an introductory paragraph from the documentation with reference. If the procedure varies over time make a brief note of it. Example:
-
-The EUS uses a stratified multi-stage design. The 2009 manual (see document *Introduction Concepts, Definitions and Procedures* under the ["Other Materials" section of the 2009 documentation site](http://microdata.gov.in/nada43/index.php/catalog/124/related_materials)) outlines the sampling procedure as:
-
-    A stratified multi-stage design has been adopted for the 66th round survey. The first stage units (FSU) will be the 
-    2001 census villages (Panchayat wards in case of Kerala) in the rural sector and Urban Frame Survey (UFS) blocks in 
-    the urban sector. The ultimate stage units (USU) will be households in both the sectors. In case of large FSUs, one
-    intermediate stage of sampling will be the selection of two hamlet-groups (hgs)/ sub-blocks (sbs) from each
-    rural/ urban FSU.
-
-Note that, even though the sampling logic is consitent over time, there are changes over time (e.g.m the blocks come from different censuses).
+The survey used a two-stage sample design with EAs as the first and households as the second stage sampling units. In total 400 EAs were selected with probability proportional to size (PPS), the measure
+of size being the number of households enumerated in the 2002 Population Census. The selection of the EAs was a systematic, one-stage operation, carried out independently for each of the 34 strata.
 
 ## What is the geographic significance level?
+The primary objectives are to provide information on the number of people classified according to their activity status, the size and characteristics of the economically active population, that is, the employed and the unemployed, the informal sector employment and informal employment, retrenchments, the number of working children , the detrimental effects of work on children, and the living conditions in general. Also, information by gender, and urban location is available.
 
-Brief outline of to what level information in the survey can be aggregated and produce statistically significant results. Example:
-The official reports detail results by gender, sector (urban or rural), and state. That is, the unemployment rate of urban women in Madhya Pradesh can be safely reported.
-
-## Other noteworthy aspects
 
