Update 1. Introduction to BGD LFS.md

--- a/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
+++ b/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
@@ -85,15 +85,16 @@ The Bangladesh Labor Force Survey (LFS) employs its national industry classifica
 
 For 2005, the correspondence is done at four digits based on [a PDF table](Utilities/BSIC_code.pdf), which we converted into a `.dta` file that is read in the harmonization process. The [file is available here](Utilities/Additional%20Data/bsic_isic_mapping.dta).
 
-
 In 2010, industries were categorized using the BSIC 2009 classification system. This system is largely compatible with ISIC Revision 4 at the 2-digit level, with one notable exception: code "34" (Recycling) is differentiated from code "38". In ISIC, code "38" encompasses recycling activities as well.
 
-In the case of 2013, the actual version is unknown, but a manual review of the codes agrees with the fact the coding is based on ISIC revision #. However, since the full correspondence is unknown, only the first two two digits are mapped to.
+In the case of 2013, the actual version is unknown, but a manual review of the codes agrees with the fact the coding is based on ISIC revision 4. However, since the full correspondence is unknown, only the first two digits were used to code the ISIC variable.
 
 <img src="Utilities/isic-bsic-relationship.png" alt="BGD_divisions" width="600" height="200">
 
 
 ### Employment: Occupation Classification
+
+The Bangladesh Labor Force Survey (LFS) utilizes two different occupational classifications to identify respondents' occupations. According to survey documentation, the International Standard Classification of Occupations (ISCO) was used in the 2005 and 2010 rounds, while the Bangladesh Standard of Occupational Classification (BSOC) 2012 was used in the 2013, 2015, and 2016 rounds.
 
 | Year | Classification in survey | ISCO revision mapped to | How mapped                |
 |:----:|:------------------------:|:-----------------------:|:--------------------------|
@@ -101,7 +102,6 @@ In the case of 2013, the actual version is unknown, but a manual review of the c
 | 2010 | ISCO 1988                | ISCO 1988               | First four digits  |
 | 2013 | BSCO 2012                | ISCO 2008               | First two digits; if not in ISCO, mapped to the first digit         |
 
-The Bangladesh Labor Force Survey (LFS) utilizes two different occupational classifications to identify respondents' occupations. According to survey documentation, the International Standard Classification of Occupations (ISCO) was used in the 2005 and 2010 rounds, while the Bangladesh Standard of Occupational Classification (BSOC) 2012 was used in the 2013, 2015, and 2016 rounds.
 
 Although the survey documentation states that the occupational codes used in the 2005 and 2010 rounds were equivalent to ISCO 1988, some four-digit occupational codes could not be found within the ISCO 1988 list at the same level. Also, we do not possess a correspondence table to map the BSOC 2012 codes to the ISCO 2008 codes. Given the issues mentioned, we recourse to using the two-digit LFS occupational codes to identify the corresponding ISCO codes while continue our efforts to gather more resources for a precise mapping of occupational codes with ISCO.
 
