Update 1. Introduction to BGD LFS.md

--- a/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
+++ b/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
@@ -14,7 +14,9 @@
 
 ## What is the BGD LFS?
 
-The Bangladesh Labor Force Survey (LFS), initiated by the Bangladesh Bureau of Statistics (BBS) in 1980, has been carried out at irregular intervals over the years. The GLD team has harmonized data for last LFS rounds, 2005-06, 2010, and 2013, before being replaced by the [Quarterly Labor Force Survey (QLFS)](../QLFS/Introduction%20to%20BGD%20QLFS.md) beginning 2015.
+The Bangladesh Labor Force Survey (LFS), initiated by the Bangladesh Bureau of Statistics (BBS) in 1980, has been carried out at irregular intervals over the years. The GLD team has harmonized data for last LFS rounds, 2005-06, 2010, and 2013, before being replaced by the [Quarterly Labor Force Survey (QLFS)](../QLFS/Introduction%20to%20BGD%20QLFS.md) beginning 2015. 
+
+The 2010 round of the LFS series only covers one month of interviews (May 2010), and for this reason, the Bangladesh Bureau of Statistics recommends users **against** using this data for time series analysis. For more information on this round, refer to this document. 
 
 ## What does the BGD LFS cover?
 
@@ -89,7 +91,7 @@ In 2010, industries were categorized using the BSIC 2009 classification system. 
 
 In the case of 2013, the actual version is unknown, but a manual review of the codes agrees with the fact the coding is based on ISIC revision 4. However, since the full correspondence is unknown, only the first two digits were used to code the ISIC variable.
 
-<img src="Utilities/isic-bsic-relationship.png" alt="BGD_divisions" width="600" height="200">
+<img src="Utilities/isic-bsic-relationship.png" width="600" height="200">
 
 
 ### Employment: Occupation Classification
@@ -104,6 +106,18 @@ The Bangladesh Labor Force Survey (LFS) utilizes two different occupational clas
 
 
 Although the survey documentation states that the occupational codes used in the 2005 and 2010 rounds were equivalent to ISCO 1988, some four-digit occupational codes could not be found within the ISCO 1988 list at the same level. Also, we do not possess a correspondence table to map the BSOC 2012 codes to the ISCO 2008 codes. Given the issues mentioned, we recourse to using the two-digit LFS occupational codes to identify the corresponding ISCO codes while continue our efforts to gather more resources for a precise mapping of occupational codes with ISCO.
+
+<img src="Utilities/isco-bsco-relationship.png" width="600" height="200">
+
+One caveat to note in the occupation categories is the spike in elementary occupations in 2010. In 2005, nearly a quarter of the employed are engaged in elementary occupations but this jumps to nearly 50% in 2010, and drops back to ~15% in 2013. This is accompanied by a large decline in the share of skilled agricultural workers. 
+
+<img src="Utilities/BGD_occup.png" width="500" height="500">
+
+
+These estimates are consistent with those reported by the Bangladesh Bureau of Statistics (see screenshot below). It is not exactly clear what caused this spike, but one possibility is the reclassification of agricultural work from skilled to unskilled. But the unique case of the 2010 survey where only interviewed were only conducted for one month raise the possibility that the estimates capture season-specific occupations. 
+
+<img src="Utilities/occup_2010.png" width="450" height="400">
+
 
 ### Wages
 
