Update 1. Introduction to BGD LFS.md

--- a/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
+++ b/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
@@ -16,7 +16,7 @@
 
 The Bangladesh Labor Force Survey (LFS), initiated by the Bangladesh Bureau of Statistics (BBS) in 1980, has been carried out at irregular intervals over the years. The GLD team has harmonized data for last LFS rounds, 2005-06, 2010, and 2013, before being replaced by the [Quarterly Labor Force Survey (QLFS)](../QLFS/Introduction%20to%20BGD%20QLFS.md) beginning 2015. 
 
-The 2010 round of the LFS series only covers one month of interviews (May 2010), and for this reason, the Bangladesh Bureau of Statistics recommends users **against** using this data for time series analysis. For more information on this round, refer to this document. 
+It is important to note that the 2010 round of the LFS series only covers one month of interviews, specifically between May 10 and May 25, 2010. This implies that the 2010 round reflect season-specific estimates; and thus, it may not be comparable with other rounds. 
 
 ## What does the BGD LFS cover?
 
