--- a/Support/B - Country Survey Details/BGD/QLFS/1. Introduction to BGD QLFS.md
+++ b/Support/B - Country Survey Details/BGD/QLFS/1. Introduction to BGD QLFS.md
@@ -43,11 +43,13 @@ The official reports detail estimates by area of residence (urban or rural), and
 
 ### Concept of employment
 
-Since the passing of the [resolution concerning statistics of work, employment and labour underutilization](https://www.ilo.org/global/statistics-and-databases/standards-and-guidelines/resolutions-adopted-by-international-conferences-of-labour-statisticians/WCMS_230304/lang--en/index.htm) in 2013 at the 19th International Conference of Labour Statisticians (ICLS) surveys are at risk of a series break due to the change in the concept of employment.
+Since the passing of the [resolution concerning statistics of work, employment and labour underutilization](https://www.ilo.org/global/statistics-and-databases/standards-and-guidelines/resolutions-adopted-by-international-conferences-of-labour-statisticians/WCMS_230304/lang--en/index.htm) in 2013 at the 19th International Conference of Labour Statisticians (ICLS-19) surveys are at risk of a series break due to the change in the concept of employment.
 
 In short, the ICLS 19 resolution restricts employment to *work performed for others in exchange for pay or profit*, meaning that own consumption work (e.g., subsistence agriculture or building housing for oneself) are not counted as employment.
 
-The Bangladesh QLFS survey reports are consistent with the LFS in using a definition for employment that includes individuals working for their own consumption. Although this definition does not align with international standards, the QLFS series contain information on individuals' intentions for economic activity, whether for sale or own consumption. This information can be used to code employment to exclude individuals whose primary intention for economic activity is own consumption. This approach allows us to adopt a definition of employment that aligns with international standards. However, adopting this break in definition makes it challenging to meaningfully compare data over time. To address this, we provide a code that enables us to identify employment using the previous definition. The precise details can be found in a [separate document here](Converting%20between%20ICLS%20Definitions.md)
+The Bangladesh QLFS questionnaire flow (i.e., the skip pattern applied to respondents' answers) is consistent with the previous (ICLS-13) definition used in the LFS prior to 2015. That is, including individuals working mostly or entirely for their own consumption are regarded as *employed*. This is also the definition in the reports.
+
+In addition, the QLFS questionnaire contains a question on the individual’s intentions for economic activity: whether for sale or own consumption. This information can be used to code employment to exclude individuals whose primary intention for economic activity is own consumption. Thus, users can adopt the ICLS-19 definition. However, adopting this break in definition makes it challenging to meaningfully compare data over time. The GLD is coded according to the definition enacted by the questionnaire, but we provide a code that enables us to identify employment using the ICLS-19 definition. The precise details can be found in a [separate document here](Converting%20between%20ICLS%20Definitions.md)
 
 
 ### Household ID
@@ -83,10 +85,10 @@ The Bangladesh QLFS employs its national industry classification system called t
 
 | Year    | Classification in survey | ISIC revision mapped to | How mapped                |
 |:-------:|:------------------------:|:-----------------------:|:--------------------------|
-| 2015-16 | BSIC 2009                | ISIC revision 4         | First 3 digits; first 2 digits if non-existent at 3 digits          |
-| 2016-17 | BSIC 2009                | ISIC revision 4         | First 3 digits; first 2 digits if non-existent at 3 digits          |
+| 2015-16 | BSIC 2009                | ISIC revision 4         | First 3 digits; first 2 digits if BSIC code non-existent at 3 digits in ISIC Rev 4 |
+| 2016-17 | BSIC 2009                | ISIC revision 4         | First 3 digits; first 2 digits if BSIC code non-existent at 3 digits in ISIC Rev 4 |
 
-As of time of writing (April 2023), an update of the BSIC has been released in 2020 to use more detailed categories of industries. While the ISIC version 4 details occupational categories at four digits, the BSIC 2020 is detailed at six digits. Based on the table below, both BSIC 2020 and BSIC 2009 are comparable at most at the single digit level. BSIC is comparable with the ISIC rev. 4 at 2 digits except for an additional two-digit code that is not in ISIC, and neither was it reported as an industry of any individual in either survey. 
+As of time of writing (April 2023), an update of the BSIC has been released in 2020 to use more detailed categories of industries. While the ISIC version 4 details occupational categories at four digits, the BSIC 2020 is detailed at six digits. Based on the table below, both BSIC 2020 and BSIC 2009 are comparable at most at the single digit level. BSIC is comparable with the ISIC Rev. 4 at 2 digits except for an additional two-digit code that is not in ISIC, and neither was it reported as an industry of any individual in either survey. 
 
 <img src="Utilities/isic-bsic-relationship.png" alt="BGD_divisions" width="600" height="200">
 
