--- a/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction.md
+++ b/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction.md
@@ -8,7 +8,7 @@
 
 ## What is the ZWE QLFS survey?
 
-The Zimbabwe Labour Force Survey (LFS)  provides socioeconomic indicators useful in monitoring living conditions as well as providing in-depth information on the labour force in Zimbabwe. The survey focuses on social and economic characteristics, in particular, status in employment, industry, occupation, place of work and social security. The periodicity of the LFCLS is 5 years.
+The Zimbabwe National Statistics Agency (ZIMSTAT) started conducting Quarterly Labour Force Surveys (QLFS’s) conducted in the 3rd quarter of 2021 to ensure timely reporting of labour statistics.
 
 ## What does the ZWE QLFS survey cover?
 
