--- a/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction.md
+++ b/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction.md
@@ -12,24 +12,25 @@ The Zimbabwe National Statistics Agency (ZIMSTAT) started conducting Quarterly L
 
 ## What does the ZWE QLFS survey cover?
 
+This QLFS is the first one to be conducted the ZWE statistics bureau. It followa the 2013 labour force framework adopted at the 19th International Conference of Labour Statisticians (ICLS) that provided new guidelines for measuring and compiling statistics on work, employment and labour underutilization. 
+
 The ZWE LFS is nationally representative, The sampling frame used for the LFCLS was the Zimbabwe Master Sample developed by the then Central Statistical Office after the 2002 Population Census. With the
 exception of Harare and Bulawayo, each of the other eight provinces was stratified into four strata according to land use: Communal Lands, Large Scale Commercial Farming Areas (LSCFA), Urban and Semi-Urban Areas, and Small Scale Commercial Farming Areas (SSCFA) and Resettlement Areas. Only one urban stratum was formed each in Harare and Bulawayo. This gave a total of 34 strata.
 
 | Year	| # of Households	| # of Individuals|
 | :-------	| :--------		| :--------	|
-| 2021 (Q3-Q4)	| 9359	| 39,798 |
-| 2022 (Q1-Q3)	| 9759	| 40,527 |
+| 2021 (Q3-Q4)	| N/A	| 90,248 |
+| 2022 (Q1-Q3)	| N/A	| 129,878 |
 
 *The household data of 2019 is yet to be confirmed by the NSO.
 
 ## Where can the data be found?
 
-The microdata from the 2011, 2014 and 2019 LFS is available throught the ILO [data catalog](https://www.ilo.org/surveyLib/index.php/catalog/LFS/?page=1&country%5B%5D=200&ps=15&repo=LFS). Documentation is also available in the data catalog. 
+The microdata from the Quarterly LFS is available throught the Zimbabwe Statistics [Website](https://www.zimstat.co.zw/labour-force-publications/). A quarterly report is provided. 
 
 
 ## What is the sampling procedure?
-The survey used a two-stage sample design with EAs as the first and households as the second stage sampling units. In total 400 EAs were selected with probability proportional to size (PPS), the measure
-of size being the number of households enumerated in the 2002 Population Census. The selection of the EAs was a systematic, one-stage operation, carried out independently for each of the 34 strata.
+The sampling producedure is a two stage sample design. The 1st stage was the selection of enumeration areas using the probability proportional to size criteria. The 2nd stage was the selection of households in the selected enumeration areas using random systematic sampling technique. A total of 500 enumeration areas and 12,500 households were selected for the survey. The survey had a national response rate of 96.1 percent.
 
 ## What is the geographic significance level?
 The primary objectives are to provide information on the number of people classified according to their activity status, the size and characteristics of the economically active population, that is, the employed and the unemployed, the informal sector employment and informal employment, retrenchments, the number of working children , the detrimental effects of work on children, and the living conditions in general. Also, information by gender, and urban location is available.
