--- a/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction.md
+++ b/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction.md
@@ -17,12 +17,12 @@ This QLFS is the first one to be conducted the ZWE statistics bureau. It followa
 The ZWE LFS is nationally representative, The sampling frame used for the LFCLS was the Zimbabwe Master Sample developed by the then Central Statistical Office after the 2002 Population Census. With the
 exception of Harare and Bulawayo, each of the other eight provinces was stratified into four strata according to land use: Communal Lands, Large Scale Commercial Farming Areas (LSCFA), Urban and Semi-Urban Areas, and Small Scale Commercial Farming Areas (SSCFA) and Resettlement Areas. Only one urban stratum was formed each in Harare and Bulawayo. This gave a total of 34 strata.
 
-| Year	| # of Households	| # of Individuals|
+| Year	| # of Households*	| # of Individuals|
 | :-------	| :--------		| :--------	|
 | 2021 (Q3-Q4)	| N/A	| 90,248 |
 | 2022 (Q1-Q3)	| N/A	| 129,878 |
 
-*The household data of 2019 is yet to be confirmed by the NSO.
+*The household data is yet to be confirmed by the NSO.
 
 ## Where can the data be found?
 
