--- a/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction.md
+++ b/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction.md
@@ -19,20 +19,26 @@ exception of Harare and Bulawayo, each of the other eight provinces was stratifi
 
 | Year	| # of Households*	| # of Individuals|
 | :-------	| :--------		| :--------	|
-| 2021 (Q3-Q4)	| N/A	| 90,248 |
-| 2022 (Q1-Q3)	| N/A	| 129,878 |
+| 2021 (Q3)	| N/A	| 46,085 |
+| 2021 (Q4)	| N/A	| 44,163 |
+| 2022 (Q1)	| N/A	| 44,442 |
+| 2022 (Q2)	| N/A	| 43,362|
+| 2022 (Q3)	| N/A	| 42,074 |
 
-*The household data is yet to be confirmed by the NSO.
+*The household data is yet to be confirmed by the NSO. 
 
 ## Where can the data be found?
-
 The microdata from the Quarterly LFS is available throught the Zimbabwe Statistics [Website](https://www.zimstat.co.zw/labour-force-publications/). A quarterly report is provided. 
-
 
 ## What is the sampling procedure?
 The sampling producedure is a two stage sample design. The 1st stage was the selection of enumeration areas using the probability proportional to size criteria. The 2nd stage was the selection of households in the selected enumeration areas using random systematic sampling technique. A total of 500 enumeration areas and 12,500 households were selected for the survey. The survey had a national response rate of 96.1 percent.
 
 ## What is the geographic significance level?
 The primary objectives are to provide information on the number of people classified according to their activity status, the size and characteristics of the economically active population, that is, the employed and the unemployed, the informal sector employment and informal employment, retrenchments, the number of working children , the detrimental effects of work on children, and the living conditions in general. Also, information by gender, and urban location is available.
+
+## Other Noteworthy Aspects
+
+In 2021 Q3 and Q4 there are some misaligment between the raw data labels and the questionaire questions. In particular the user of the raw data should note that Q8, Q9 and Q10 questions and answer labels are different to the questionaire.
+
 
 
