--- a/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction.md
+++ b/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction.md
@@ -41,6 +41,14 @@ The primary objectives are to provide information on the number of people classi
 - In 2021 Q3 and Q4 there are some misaligment between the raw data labels and the questionaire questions. In particular the user of the raw data should note that Q8, Q9 and Q10 questions and answer labels are different to the questionaire.
 - In 2021 Q3 and Q4 the values of status of employment differ largely between quarters for contributing family workers. The harmonized data has integrated this in final file.
 
+<br></br>
+![Quarter_3](utilities/q3_empstat.png)
+<br></br>
+
+<br></br>
+![Quarter_4](utilities/q_empstat.png)
+<br></br>
+
 
 
 
