--- a/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction.md
+++ b/Support/B - Country Survey Details/ZWE/QLFS/1. Introduction.md
@@ -42,11 +42,11 @@ The primary objectives are to provide information on the number of people classi
 - In 2021 Q3 and Q4 the values of status of employment differ largely between quarters for contributing family workers. The harmonized data has integrated this in final file.
 
 <br></br>
-![Quarter_3](utilities/q3_empstat.png)
+![Quarter_3](utilities/q3_empstat.PNG)
 <br></br>
 
 <br></br>
-![Quarter_4](utilities/q_empstat.png)
+![Quarter_4](utilities/Q4_empstat.PNG)
 <br></br>
 
 
